--- a/Secure Browser/AIRSplashViewController.xib
+++ b/Secure Browser/AIRSplashViewController.xib
@@ -48,7 +48,7 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">Default-Portrait.png</string>
+							<string key="NSResourceName">Default</string>
 						</object>
 					</object>
 					<object class="IBUILabel" id="596777010">
@@ -354,8 +354,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">Default-Portrait.png</string>
-			<string key="NS.object.0">{768, 1004}</string>
+			<string key="NS.key.0">Default</string>
+			<string key="NS.object.0">{768, 1024}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
